# Beginner-Projects

./: README.md
hangman/src/: main.rs
minimal-book-manager/: Cargo.toml
minimal-book-manager/migrations/: 0001_books_table.sql
minimal-book-manager/notes/: variables.txt
minimal-book-manager/src/: main.rs
minimal-book-manager/style/: style.css
rock-paper-scissors/src/: main.rs
tictactoe/src/: main.rs
webassembly-counter/: Cargo.toml  index.html  style.css
webassembly-counter/src/: main.rs
