[package]
name = "minimal-book-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features =  ["full"]}
sqlx = { version = "0.8.0", features =  ["postgres", "runtime-tokio-rustls"]}
gtk4 = "0.9.0"
gsk4 = "0.9.0"
